css: fix word wrapping on chrome

--- a/src/style.css
+++ b/src/style.css
@@ -109,14 +109,15 @@ li {
   border: 1px solid;
   display: inline-block;
   word-break: break-word;
-  /* 16 bytes * (2 chars per byte + 1 space) - 1 final space + 1 due to a bug in chrome, where if
-   * you set width to X ch and put X characters, it may or may not wrap. */
-  width: 48ch;
+  /* 16 bytes * (2 chars per byte + 1 space) - 1 final space */
+  width: 47ch;
+  white-space: pre;
 }
 #ascii {
   border: 1px solid;
   display: inline-block;
   width: 16ch;
+  white-space: pre;
 }
 #vmap {
   border: 1px solid;
